avance casi termino ev1

--- a/Home.html
+++ b/Home.html
@@ -12,7 +12,7 @@
     <title>ArtiPets - Conviertete en un Artiko para tus mascotas</title>
 </head>
 <body>
-
+    
     <!--"Jumbotron" dividido en 2 secciones de 6-->
     <div class="container-fluid">
         <div class="row">
@@ -39,7 +39,7 @@
             <a class="nav-link" href="bandanasnl.html" style="color: rgb(96, 62, 133); font-size: 25px;"><i class="fa-solid fa-cat"></i> Bandanas</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="correasnl.html" style="color: rgb(96, 62, 133); font-size: 25px;"><i class="fa-solid fa-paw"></i> Correas</a>
+            <a class="nav-link" href="correasnl.html" style="color: rgb(96, 62, 133); font-size: 25px;"><i class="fa-solid fa-paw"></i> Correas/Collares</a>
             </li>
             <li class="nav-item">
             <a class="nav-link" href="identificacionesnl.html" style="color: rgb(96, 62, 133); font-size: 25px;"><i class="fa-solid fa-id-card"></i> Identificaciónes</a>
@@ -137,9 +137,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                
-                </div>
+                </div>                
             </div>
         </div>
     </div>
@@ -180,6 +178,7 @@
     <!-- CDN JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 <footer>
     <div class="container-fluid">
         <div class="row">
