avance casi termino arreglo row ev1

--- a/Home.html
+++ b/Home.html
@@ -19,7 +19,7 @@
             <div class="col-sm-12 encabezado fuente">
                 <div class="row">
                     <div class="col-sm-6 d-flex">
-                        <img src="img/Logo.png" alt="" style="max-width: 100px; max-height: 80px; margin: 8px;">
+                        <img src="img/Logo.png" alt="" class="logomedia">
                         <h5 style="margin: 35px 30px;">Dandole la mejor vida a tus mascotas desde 1732 a.c.</h5>
                     </div>
                     <div class="col-sm-6 d-flex justify-content-end ">
