--- a/login.html
+++ b/login.html
@@ -12,14 +12,13 @@
     <title>ArtiPets - Conviertete en un Artiko para tus mascotas</title>
 </head>
 <body>
-
     <!--"Jumbotron" dividido en 2 secciones de 6-->
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12 encabezado fuente">
                 <div class="row">
                     <div class="col-sm-6 d-flex">
-                        <a href="home.html"><img src="img/Logo.png" alt="" style="max-width: 100px; max-height: 80px; margin: 8px;"></a>
+                        <a href="home.html"><img src="img/Logo.png" alt="" class="logomedia"></a>
                         <h5 style="margin: 35px 30px;">Dandole la mejor vida a tus mascotas desde 1732 a.c.</h5>
                     </div>
                     <div class="col-sm-6 d-flex justify-content-end ">
@@ -60,7 +59,7 @@
                             <input class="txtlogin" type="text" name="direccion" placeholder="Dirección">
                             <h6>Contraseña</h6>
                             <input class="txtlogin" type="password" name="pass" placeholder="Contraseña">
-                            <a href="HomeLogin.html"><input class="btnlogin" type="submit" value="Registrar"></a>
+                            <a href="homeLogin.html"><input class="btnlogin" type="submit" value="Registrar"></a>
                             <p class="pregister"></p>
                         </div>
                     </div>
@@ -70,10 +69,8 @@
             <div class="col-sm2"></div>
         </div>
     </div>
+<br>
     
-
-
-
 
 
     <!-- The Modal -->
