--- a/correasnl.html
+++ b/correasnl.html
@@ -19,7 +19,7 @@
             <div class="col-sm-12 encabezado fuente">
                 <div class="row">
                     <div class="col-sm-6 d-flex">
-                        <a href="home.html"><img src="img/Logo.png" alt="" style="max-width: 100px; max-height: 80px; margin: 8px;"></a>
+                        <a href="home.html"><img src="img/Logo.png" alt="" class="logomedia"></a>
                         <h5 style="margin: 35px 30px;">Dandole la mejor vida a tus mascotas desde 1732 a.c.</h5>
                     </div>
                     <div class="col-sm-6 d-flex justify-content-end ">
@@ -59,11 +59,12 @@
         </div>
     </div>
 
-     <!--carta de productos-->
-     <div class="container-fluid">
-         <div class="row">
+    <!--carta de productos-->
+    <div class="container-fluid">
+        <div class="row">
             <div class="col-sm-12 d-flex">
-                <div class="col-sm-3">
+                <div class="row">
+                    <div class="col-sm-3">
 
                         <!--carta 1-->
                     <div class="conte">
@@ -79,6 +80,7 @@
                                 <span class="precio1"><H4>$3.800 <i class="fa-solid fa-crown"></i></H4></span>
                                 <span class="precio2"><b>$4.000</b></span>
                                 <i class="fa-solid fa-cart-plus"></i>
+                                <button type="button" class="btnm">Agregar al carrito</button>
                             </div>
                         </div>
                     </div>              
@@ -99,6 +101,7 @@
                                 <span class="precio1"><H4>$9.500 <i class="fa-solid fa-crown"></i></H4></span>
                                 <span class="precio2"><b>$10.000</b></span>
                                 <i class="fa-solid fa-cart-plus"></i>
+                                <button type="button" class="btnm">Agregar al carrito</button>
                             </div>
                         </div>
                     </div>  
@@ -119,6 +122,7 @@
                                 <span class="precio1"><H4>$10.450 <i class="fa-solid fa-crown"></i></H4></span>
                                 <span class="precio2"><b>$11.000</b></span>
                                 <i class="fa-solid fa-cart-plus"></i>
+                                <button type="button" class="btnm">Agregar al carrito</button>
                             </div>
                         </div>
                     </div>  
@@ -139,6 +143,7 @@
                                 <span class="precio1"><H4>$9.500 <i class="fa-solid fa-crown"></i></H4></span>
                                 <span class="precio2"><b>$10.000</b></span>
                                 <i class="fa-solid fa-cart-plus"></i>
+                                <button type="button" class="btnm">Agregar al carrito</button>
                             </div>
                         </div>
                     </div>  
@@ -151,85 +156,91 @@
      <div class="container-fluid">
         <div class="row">
            <div class="col-sm-12 d-flex">
-               <div class="col-sm-3">
+               <div class="row">
+                <div class="col-sm-3">
 
-                       <!--carta 1-->
-                   <div class="conte">
-                       <div class="card gato">
-                           <img src="img/productos/collarn4.jpg" alt="">
-                       </div>
-                       <div class="informacion">
-                           <h1>Cat collar Modelo 4</h1>
-                           <p class="x">Agotado </p>
-                       </div>
-                       <div class="precio">
-                           <div class="box-precio">
-                               <span class="precio1"><H4>$6.650 <i class="fa-solid fa-crown"></i></H4></span>
-                               <span class="precio2"><b>$7.000</b></span>
-                               <i class="fa-solid fa-cart-plus"></i>
-                           </div>
-                       </div>
-                   </div>              
-               </div>
+                    <!--carta 1-->
+                <div class="conte">
+                    <div class="card gato">
+                        <img src="img/productos/collarn4.jpg" alt="">
+                    </div>
+                    <div class="informacion">
+                        <h1>Cat collar Modelo 4</h1>
+                        <p class="x">Agotado </p>
+                    </div>
+                    <div class="precio">
+                        <div class="box-precio">
+                            <span class="precio1"><H4>$6.650 <i class="fa-solid fa-crown"></i></H4></span>
+                            <span class="precio2"><b>$7.000</b></span>
+                            <i class="fa-solid fa-cart-plus"></i>
+                            <button type="button" class="btnm">Agregar al carrito</button>
+                        </div>
+                    </div>
+                </div>              
+            </div>
 
-               <!--carta 2-->
-               <div class="col-sm-3">
-                   <div class="conte">
-                       <div class="card gato">
-                           <img src="img/productos/correan1" alt="">
-                       </div>
-                       <div class="informacion">
-                           <h1>Correa + Harness (Cafe)</h1>
-                           <p class="x">Agotado </p>
-                       </div>
-                       <div class="precio">
-                           <div class="box-precio">
-                               <span class="precio1"><H4>$5.320 <i class="fa-solid fa-crown"></i></H4></span>
-                               <span class="precio2"><b>$5.600</b></span>
-                               <i class="fa-solid fa-cart-plus"></i>
-                           </div>
-                       </div>
-                   </div>  
-               </div>
+            <!--carta 2-->
+            <div class="col-sm-3">
+                <div class="conte">
+                    <div class="card gato">
+                        <img src="img/productos/correan1" alt="">
+                    </div>
+                    <div class="informacion">
+                        <h1>Correa + Harness (Cafe)</h1>
+                        <p class="x">Agotado </p>
+                    </div>
+                    <div class="precio">
+                        <div class="box-precio">
+                            <span class="precio1"><H4>$5.320 <i class="fa-solid fa-crown"></i></H4></span>
+                            <span class="precio2"><b>$5.600</b></span>
+                            <i class="fa-solid fa-cart-plus"></i>
+                            <button type="button" class="btnm">Agregar al carrito</button>
+                        </div>
+                    </div>
+                </div>  
+            </div>
 
-               <!--carta 3-->
-               <div class="col-sm-3">
-                   <div class="conte">
-                       <div class="card gato">
-                           <img src="img/productos/correan2.jpg" alt="">
-                       </div>
-                       <div class="informacion">
-                           <h1>Correa + Harness (Azul)</h1>
-                           <p class="fecha">Disponible</p>
-                       </div>
-                       <div class="precio">
-                           <div class="box-precio">
-                               <span class="precio1"><H4>$2.850 <i class="fa-solid fa-crown"></i></H4></span>
-                               <span class="precio2"><b>$3.000</b></span>
-                               <i class="fa-solid fa-cart-plus"></i>
-                           </div>
-                       </div>
-                   </div>  
-               </div>
+            <!--carta 3-->
+            <div class="col-sm-3">
+                <div class="conte">
+                    <div class="card gato">
+                        <img src="img/productos/correan2.jpg" alt="">
+                    </div>
+                    <div class="informacion">
+                        <h1>Correa + Harness (Azul)</h1>
+                        <p class="fecha">Disponible</p>
+                    </div>
+                    <div class="precio">
+                        <div class="box-precio">
+                            <span class="precio1"><H4>$2.850 <i class="fa-solid fa-crown"></i></H4></span>
+                            <span class="precio2"><b>$3.000</b></span>
+                            <i class="fa-solid fa-cart-plus"></i>
+                            <button type="button" class="btnm">Agregar al carrito</button>
+                        </div>
+                    </div>
+                </div>  
+            </div>
 
-               <!--carta 4-->
-               <div class="col-sm-3">
-                   <div class="conte">
-                       <div class="card gato">
-                           <img src="img/productos/correan3.jpg" alt="">
-                       </div>
-                       <div class="informacion">
-                           <h1>Correa + Harness (Arcoíris)</h1>
-                           <p class="fecha">Disponible</p>
-                       </div>
-                       <div class="precio">
-                           <div class="box-precio">
-                               <span class="precio1"><H4>$7.125 <i class="fa-solid fa-crown"></i></H4></span> 
-                               <span class="precio2"><b>$7.500</b></span>
-                               <i class="fa-solid fa-cart-plus"></i>
-                           </div>
-                       </div>
-                   </div>  
+            <!--carta 4-->
+            <div class="col-sm-3">
+                <div class="conte">
+                    <div class="card gato">
+                        <img src="img/productos/correan3.jpg" alt="">
+                    </div>
+                    <div class="informacion">
+                        <h1>Correa + Harness (Arcoíris)</h1>
+                        <p class="fecha">Disponible</p>
+                    </div>
+                    <div class="precio">
+                        <div class="box-precio">
+                            <span class="precio1"><H4>$7.125 <i class="fa-solid fa-crown"></i></H4></span> 
+                            <span class="precio2"><b>$7.500</b></span>
+                            <i class="fa-solid fa-cart-plus"></i>
+                            <button type="button" class="btnm">Agregar al carrito</button>                               
+                        </div>
+                    </div>
+                </div>  
+            </div>
                </div>
            </div>
         </div>
@@ -239,86 +250,93 @@
     <div class="container-fluid">
         <div class="row">
            <div class="col-sm-12 d-flex">
-               <div class="col-sm-3">
+                <div class="row">
+                    <div class="col-sm-3">
 
-                       <!--carta 1-->
-                   <div class="conte">
-                       <div class="card gato">
-                           <img src="img/productos/collarn5.jpg" alt="">
-                       </div>
-                       <div class="informacion">
-                           <h1>Collar Navideño</h1>
-                           <p class="fecha cardarreglo">Disponible</p>
-                       </div>
-                       <div class="precio">
-                           <div class="box-precio">
-                               <span class="precio1"><H4>$9.500 <i class="fa-solid fa-crown"></i></H4></span>
-                               <span class="precio2"><b>$10.000</b></span>
-                               <i class="fa-solid fa-cart-plus"></i>
-                           </div>
-                       </div>
-                   </div>              
-               </div>
-
-               <!--carta 2-->
-               <div class="col-sm-3">
-                   <div class="conte">
-                       <div class="card gato">
-                           <img src="img/productos/collarn6.jpg" alt="">
-                       </div>
-                       <div class="informacion">
-                           <h1>Gotham Cat Collar</h1>
-                           <p class="fecha">solo 1</p>
-                       </div>
-                       <div class="precio">
-                           <div class="box-precio">
-                               <span class="precio1"><H4>$9.500 <i class="fa-solid fa-crown"></i></H4></span>
-                               <span class="precio2"><b>$10.000</b></span>
-                               <i class="fa-solid fa-cart-plus"></i>
-                           </div>
-                       </div>
-                   </div>  
-               </div>
-
-               <!--carta 3-->
-               <div class="col-sm-3">
-                   <div class="conte">
-                       <div class="card gato">
-                           <img src="img/productos/collarn7.jpg" alt="">
-                       </div>
-                       <div class="informacion">
-                           <h1>Collar de Tigre</h1>
-                           <p class="x">Agotado </p>
-                       </div>
-                       <div class="precio">
-                           <div class="box-precio">
-                               <span class="precio1"><H4>$7.600 <i class="fa-solid fa-crown"></i></H4></span>
-                               <span class="precio2"><b>$8.000</b></span>
-                               <i class="fa-solid fa-cart-plus"></i>
-                           </div>
-                       </div>
-                   </div>  
-               </div>
-
-               <!--carta 4-->
-               <div class="col-sm-3">
-                   <div class="conte">
-                       <div class="card gato">
-                           <img src="img/productos/correan4.jpg" alt="">
-                       </div>
-                       <div class="informacion">
-                           <h1>Correa + Harness (Coral)</h1>
-                           <p class="fecha">Disponible</p>
-                       </div>
-                       <div class="precio">
-                           <div class="box-precio">
-                               <span class="precio1"><H4>$10.925 <i class="fa-solid fa-crown"></i></H4></span>
-                               <span class="precio2"><b>$11.500</b></span>
-                               <i class="fa-solid fa-cart-plus"></i>
-                           </div>
-                       </div>
-                   </div>  
-               </div>
+                        <!--carta 1-->
+                    <div class="conte">
+                        <div class="card gato">
+                            <img src="img/productos/collarn5.jpg" alt="">
+                        </div>
+                        <div class="informacion">
+                            <h1>Collar Navideño</h1>
+                            <p class="fecha cardarreglo">Disponible</p>
+                        </div>
+                        <div class="precio">
+                            <div class="box-precio">
+                                <span class="precio1"><H4>$9.500 <i class="fa-solid fa-crown"></i></H4></span>
+                                <span class="precio2"><b>$10.000</b></span>
+                                <i class="fa-solid fa-cart-plus"></i>
+                                <button type="button" class="btnm">Agregar al carrito</button>
+                            </div>
+                        </div>
+                    </div>              
+                </div>
+ 
+                <!--carta 2-->
+                <div class="col-sm-3">
+                    <div class="conte">
+                        <div class="card gato">
+                            <img src="img/productos/collarn6.jpg" alt="">
+                        </div>
+                        <div class="informacion">
+                            <h1>Gotham Cat Collar</h1>
+                            <p class="fecha">solo 1</p>
+                        </div>
+                        <div class="precio">
+                            <div class="box-precio">
+                                <span class="precio1"><H4>$9.500 <i class="fa-solid fa-crown"></i></H4></span>
+                                <span class="precio2"><b>$10.000</b></span>
+                                <i class="fa-solid fa-cart-plus"></i>
+                                <button type="button" class="btnm">Agregar al carrito</button>
+                            </div>
+                        </div>
+                    </div>  
+                </div>
+ 
+                <!--carta 3-->
+                <div class="col-sm-3">
+                    <div class="conte">
+                        <div class="card gato">
+                            <img src="img/productos/collarn7.jpg" alt="">
+                        </div>
+                        <div class="informacion">
+                            <h1>Collar de Tigre</h1>
+                            <p class="x">Agotado </p>
+                        </div>
+                        <div class="precio">
+                            <div class="box-precio">
+                                <span class="precio1"><H4>$7.600 <i class="fa-solid fa-crown"></i></H4></span>
+                                <span class="precio2"><b>$8.000</b></span>
+                                <i class="fa-solid fa-cart-plus"></i>
+                                <button type="button" class="btnm">Agregar al carrito</button>
+                            </div>
+                        </div>
+                    </div>  
+                </div>
+ 
+                <!--carta 4-->
+                <div class="col-sm-3">
+                    <div class="conte">
+                        <div class="card gato">
+                            <img src="img/productos/correan4.jpg" alt="">
+                        </div>
+                        <div class="informacion">
+                            <h1>Correa + Harness (Coral)</h1>
+                            <p class="fecha">Disponible</p>
+                        </div>
+                        <div class="precio">
+                            <div class="box-precio">
+                                <span class="precio1"><H4>$10.925 <i class="fa-solid fa-crown"></i></H4></span>
+                                <span class="precio2"><b>$11.500</b></span>
+                                <i class="fa-solid fa-cart-plus"></i>
+                                <button type="button" class="btnm">Agregar al carrito</button>
+                            </div>
+                        </div>
+                    </div>  
+                </div>
+                </div>
+                </div>
            </div>
         </div>
     </div>
