--- a/suscripcion.html
+++ b/suscripcion.html
@@ -59,24 +59,24 @@
 
     <div class="contenedor">
         <div class="tabla">
-            <h2>Suscripcion artipets.</h2>
-            <img src="img/crown.png" style="width:50px" alt="">
-            <h3>Donaciones</h3>
-            <p>Paga ahora y recibe un 5% en de descuento en tus productos destacados</p>
+            <p class="titulosub">Suscripcion artipets.</p>
+            <img src="img/crown.png" class="imgsub" alt="">
+            <p class="subtitulosub">Donaciones</p>
+            <p class="descripcionsub">Paga ahora y recibe un 5% en de descuento en tus productos destacados</p>
             <a href="" class="boton">Paga ahora</a>
         </div>
         <div class="tabla">
-            <h2>Vista suscripcion</h2>
-            <img src="img/crown.png" style="width:50px" alt="">
-            <h3>suscripcion y donaciones.</h3>
-            <p>Recuerda que pagando tendras beneficios</p>
+            <p class="titulosub">Vista suscripcion</p>
+            <img src="img/crown.png" class="imgsub" alt="">
+            <p class="subtitulosub">suscripcion y donaciones.</p>
+            <p class="descripcionsub">Recuerda que pagando tendras beneficios</p>
             <a href="" class="boton">visualización</a>
         </div>
         <div class="tabla">
-            <h2>Eliminar suscripcion</h2>
-            <img src="img/crown.png" style="width:50px" alt="">
-            <h3>Eliminar suscripcion</h3>
-            <p>Se puede renovar en cualquier momento</p>
+            <p class="titulosub">Eliminar suscripcion</p>
+            <img src="img/crown.png" class="imgsub" alt="">
+            <p class="subtitulosub">Eliminar suscripcion</p>
+            <p class="descripcionsub">Se puede renovar en cualquier momento</p>
             <a href="" class="boton">Eliminar suscripcion</a>
         </div>
     </div>
