--- a/historial.html
+++ b/historial.html
@@ -269,7 +269,7 @@
             <div class="modal-body">
                 <div class="container-fluid">
                     <div class="row">
-                        <a href="Home.html"><button type="button" class="btn btn-danger"> Salir</button></a>
+                        <a href="index.html"><button type="button" class="btn btn-danger"> Salir</button></a>
                     </div>
                 </div>                
             </div>
