--- a/login.html
+++ b/login.html
@@ -18,11 +18,11 @@
             <div class="col-sm-12 encabezado fuente">
                 <div class="row">
                     <div class="col-sm-6 d-flex">
-                        <a href="home.html"><img src="img/Logo.png" alt="" class="logomedia"></a>
+                        <a href="index.html"><img src="img/Logo.png" alt="" class="logomedia"></a>
                         <h5 style="margin: 35px 30px;">Dandole la mejor vida a tus mascotas desde 1732 a.c.</h5>
                     </div>
                     <div class="col-sm-6 d-flex justify-content-end ">
-                        <a href="Home.html"><button type="button" class="btn btn-info btnmedia"><i class="fa-solid fa-home"></i> Regresar</button></a>
+                        <a href="index.html"><button type="button" class="btn btn-info btnmedia"><i class="fa-solid fa-home"></i> Regresar</button></a>
                     </div>
                 </div>
             </div>
