--- a/identificacionesnl.html
+++ b/identificacionesnl.html
@@ -23,7 +23,7 @@
                         <h5 style="margin: 35px 30px;">Dandole la mejor vida a tus mascotas desde 1732 a.c.</h5>
                     </div>
                     <div class="col-sm-6 d-flex justify-content-end ">
-                        <a href="Login.html"> <button type="button" class="btn btn-success btnmedia"><i class="fa-solid fa-circle-user"></i> Iniciar Sesión</button></a>                       
+                        <a href="login.html"> <button type="button" class="btn btn-success btnmedia"><i class="fa-solid fa-circle-user"></i> Iniciar Sesión</button></a>                       
                     </div>
                 </div>
             </div>
