--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
                             <input class="txtlogin" type="text" name="usuario" placeholder="Usuario">
                             <h6>Contraseña</h6>
                             <input class="txtlogin" type="password" name="pass" placeholder="Contraseña">
-                            <a href="HomeLogin.html"><input class="btnlogin" type="submit" value="Login"></a> 
+                            <a href="homelogin.html"><input class="btnlogin" type="submit" value="Login"></a> 
                             <p class="plogin"><a href="#">Olvidé mi contraseña</a></p>
                         </div>
                         <div class="col-sm-6">
@@ -59,7 +59,7 @@
                             <input class="txtlogin" type="text" name="direccion" placeholder="Dirección">
                             <h6>Contraseña</h6>
                             <input class="txtlogin" type="password" name="pass" placeholder="Contraseña">
-                            <a href="homeLogin.html"><input class="btnlogin" type="submit" value="Registrar"></a>
+                            <a href="homelogin.html"><input class="btnlogin" type="submit" value="Registrar"></a>
                             <p class="pregister"></p>
                         </div>
                     </div>
