--- a/correas.html
+++ b/correas.html
@@ -19,7 +19,7 @@
             <div class="col-sm-12 encabezado fuente">
                 <div class="row">
                     <div class="col-sm-6 d-flex mt-2">
-                        <a href="HomeLogin.html"><img src="img/Logo.png" alt="" class="logomedia"></a>
+                        <a href="homelogin.html"><img src="img/Logo.png" alt="" class="logomedia"></a>
                         <h5 style="margin: 35px 30px;">Dandole la mejor vida a tus mascotas desde 1732 a.c.</h5>
                     </div>
                     <div class="col-sm-6 mt-2 d-flex justify-content-end ">
