--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                               <h4 class="card-title">Bandana destacada</h4>
                               <img src="img/productos/gatovandalo.jpg" alt="" class="imgcartas">
                               <p></p>
-                              <a href="#" class="card-link">Collar colo-colo para perro largo de hasta 60 centimetros (sirve para humanos tambien)</a>
+                              <a href="#" class="card-link">Bandana para Gato Mafioso Modelo legendario</a>
                             </div>
                         </div>
                     </div>
@@ -123,7 +123,7 @@
                               <h4 class="card-title">Identificación destacada</h4>
                               <img src="img/productos/D_NQ_NP_611376-MLC48332891372_112021-V.jpg" alt="" class="imgcartas">
                               <p></p>
-                              <a href="#" class="card-link">Collar colo-colo para perro largo de hasta 60 centimetros (sirve para humanos tambien)</a>
+                              <a href="#" class="card-link">Identificacion del gato mas buscado en toda america</a>
                             </div>
                         </div>
                     </div>
@@ -133,7 +133,7 @@
                               <h4 class="card-title">Comida destacada</h4>
                               <img src="img/productos/Pedigree-Adulto.png" alt="" class="imgcartas">
                               <p></p>
-                              <a href="#" class="card-link">Collar colo-colo para perro largo de hasta 60 centimetros (sirve para humanos tambien)</a>
+                              <a href="#" class="card-link">Comida que come el mismisimo Perro Waton</a>
                             </div>
                         </div>
                     </div>
